--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-uglifyjs": "^0.6.2",
     "livereload": "^0.4.1"
